--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -24,7 +24,7 @@
 @import "@{path}/button-groups.less";
 @import "@{path}/input-groups.less";
 @import "@{path}/navs.less";
-@import "@{path}/navbar.less";
+// @import "@{path}/navbar.less";
 // @import "@{path}/breadcrumbs.less";
 // @import "@{path}/pagination.less";
 // @import "@{path}/pager.less";
@@ -54,6 +54,7 @@
 @import "./mixins.less";
 @import "./utilities.less";
 @import "./overrides.less";
+@import "./navbar.less";
 
 @import "./base/layout.less";
 @import "./module/image-preview.less";
