--- a/src/Adstacy/AppBundle/Resources/public/less/variables.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/variables.less
@@ -1,6 +1,6 @@
 @import "./bootstrap/variables.less";
-@body-bg: #ddd;
-@brand-primary: #b00;
+@body-bg: #eee;
+@brand-primary: #99e58c;
 @navbar-default-bg: #fff;
 @border-color: #ccc;
 @input-border-focus: #bbb;
@@ -9,7 +9,7 @@
 @jumbotron-color: #333;
 @jumbotron-bg: transparent;
 
-@link-primary: #b00;
+@link-primary: @brand-primary;
 @link-secondary: #888;
 
 @text-primary: #333;
@@ -23,3 +23,5 @@
 @border-radius-base:             0;
 @border-radius-large:            0;
 @border-radius-small:            0;
+@zindex-sidebar: 1000;
+@navbar-margin-bottom: 0;
