--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -89,6 +89,8 @@
   </div>
 {% endblock %}
 
+{% block sidebar %}{% endblock %}
+
 {% block javascripts %}
   {{ parent()  }}
   <script type="text/javascript">
