--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -145,7 +145,7 @@
         </div>
         {% if user.about %}
         <div id="user-about" class="panel-body">
-          <p class="break-word">{{ parse_url(parse_hashtag(user.about)) }}</p>
+          <p class="hyphens">{{ parse_url(parse_hashtag(user.about)) }}</p>
         </div>
         {% endif %}
         <div id="user-latest-adverts" class="clearfix">
