--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -1,5 +1,5 @@
-<div class="advert masonry-item">
-  <div class="advert-image">
+<div class="advert">
+  <div class="advert-img">
     <a href="{{ path('adstacy_app_ad_show', {id: ad.id}) }}">
       <img class="lazy" src="{{ asset('bundles/adstacyapp/img/transparent.gif') }}"
         data-original="{{ vich_uploader_asset(ad, 'image')|imagine_filter('thumbnail') }}"
@@ -7,56 +7,70 @@
     </a>
   </div>
 
-  <div class="advert-sect break-word">
-    <p>{{ parse_url(parse_hashtag(ad.description)) }}</p>
+  <div class="advert-tags">
+    <a href="#">#kuliner</a>
+    <a href="#">#masakan</a>
+    <a href="#">#medan</a>
+    <a href="#">#indonesia</a>
+    <a href="#">#enak</a>
+    <a href="#">#mie</a>
+    <a href="#">#sotoAyam</a>
+    <a href="#">#pedas</a>
+    <a href="#">#pedas</a>
   </div>
 
-  <div class="advert-sect advert-counter text-overflow">
-    <a href="{{ path('adstacy_app_ad_promotes', {id: ad.id}) }}"><span class="promotes-count">{{ ad.promoteesCount }}</span> Promotes</a>
+  <div class="advert-detail">
+    <div class="advert-user clearfix">
+      {% include 'AdstacyAppBundle:User:user_mini.html.twig' with {user: ad.user, text: ago(ad.created), as_link: true} %}
+    </div>
+    <p class="advert-desc">
+      {{ parse_url(parse_hashtag(ad.description)) }}
+    </p>
+  </div>
+
+  <div class="advert-counter">
+    <a href="{{ path('adstacy_app_ad_promotes', {id: ad.id}) }}"><span class="promotes-count">{{ ad.promoteesCount }}</span> Broadcasts</a>
+    &middot;
     <a href="{{ path('adstacy_app_ad_show', {id: ad.id}) }}#comments"><span class="comments-count">{{ ad.commentsCount }}</span> Comments</a>
   </div>
 
-  <div class="advert-sect advert-user clearfix">
-    {% include 'AdstacyAppBundle:User:user_mini.html.twig' with {user: ad.user, text: ago(ad.created), as_link: true} %}
-    <div class="advert-user-action btn-group">
-      {% if app.user %}
-        {% set promoted = app.user.hasPromote(ad) %}
-        <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary btn-promote promote {% if promoted %}hide{% endif %}" title="Promote">
-          <i class="icon-bullhorn"></i>
-        </a>
-        <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-success btn-promote unpromote {% if not promoted %}hide{% endif %}" title="Unpromote">
-          <i class="icon-bullhorn"></i>
-        </a>
-      {% else %}
-        <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary btn-promote" title="Promote">
-          <i class="icon-bullhorn"></i>
-        </a>
-      {% endif %}
+  <div class="advert-action btn-group btn-group-justified">
+    {% if app.user %}
+      {% set promoted = app.user.hasPromote(ad) %}
+      <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="icon icon-bullhorn btn btn-default btn-promote promote {% if promoted %}hide{% endif %}" title="Broadcast"><span>BROADCAST</span></a>
+      <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="icon icon-bullhorn btn btn-primary btn-promote unpromote {% if not promoted %}hide{% endif %}" title="Unbroadcast"><span>UNBROADCAST</span></a>
+    {% else %}
+      <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="icon icon-bullhorn btn btn-default btn-promote" title="Broadcast"><span>BROADCAST</span></a>
+    {% endif %}
 
-      <div class="btn-group">
-        <a class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-          <i class="icon-share"></i>
-        </a>
-        <ul class="advert-social-list dropdown-menu pull-right">
-          <li>
-            {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
-            {% set tags = ad.tags|join(',') %}
-            {% set desc = remove_hashtag(ad.description) %} {# remove hashtags because # character is fragment in url #}
-            {% set twitterUrl = "https://twitter.com/share?url=#{adUrl}&text=#{desc}&hashtags=#{tags}" %}
-            {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
-            <a href="{{ facebookUrl }}" class="facebook-share">
-              <i class="icon-facebook"></i> Share
-            </a>
-          </li>
-          <li>
-            <a href="{{ twitterUrl }}" class="tweet">
-              <i class="icon-twitter twitter-share"></i> Tweet
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
+    <a href="#" class="btn btn-default"><span>COMMENT</span></a>
+    <a href="#" class="icon icon-share btn btn-default"><span>SHARE</span></a>
   </div>
+
+<!--
+  <div class="btn-group">
+    <a class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+      <i class="icon-share"></i>
+    </a>
+    <ul class="advert-social-list dropdown-menu pull-right">
+      <li>
+        {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
+        {% set tags = ad.tags|join(',') %}
+        {% set desc = remove_hashtag(ad.description) %} {# remove hashtags because # character is fragment in url #}
+        {% set twitterUrl = "https://twitter.com/share?url=#{adUrl}&text=#{desc}&hashtags=#{tags}" %}
+        {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
+        <a href="{{ facebookUrl }}" class="facebook-share">
+          <i class="icon-facebook"></i> Share
+        </a>
+      </li>
+      <li>
+        <a href="{{ twitterUrl }}" class="tweet">
+          <i class="icon-twitter twitter-share"></i> Tweet
+        </a>
+      </li>
+    </ul>
+  </div>
+
   {% if app.user %}
   <div class="advert-comment">
     <form action="{{ path('adstacy_app_ad_comment', {id: ad.id}) }}" method="post">
@@ -65,4 +79,5 @@
     </form>
   </div>
   {% endif %}
+-->
 </div>
