Add youtube video support.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -101,9 +101,11 @@
       {% if not app.debug %}
       <script type="text/javascript">
         (function() {
+          // google analytics
           var ga = document.createElement('script');     ga.type = 'text/javascript'; ga.async = true;
           ga.src = ('https:'   == document.location.protocol ? 'https://ssl'   : 'http://www') + '.google-analytics.com/ga.js';
           var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+
         })();
       </script>
       {% endif %}
@@ -112,6 +114,27 @@
       %}
         <script src="{{ asset_url }}" type="text/javascript"></script>
       {% endjavascripts %}
+      <script type="text/javascript">
+        var tag = document.createElement('script');
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+        function onYouTubeIframeAPIReady() {
+          $('.advert-video').each(function() {
+            var $cont = $(this);
+            $cont.find('a').click(function() {
+              var $this = $(this);
+              var player = new YT.Player($cont[0], {
+                height: '234',
+                width: '234',
+                videoId: $cont.attr('data-youtube-id')
+              });
+
+              return false;
+            });
+          });
+        }
+      </script>
     {% endblock %}
   </body>
 </html>
