--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -34,6 +34,13 @@
       <div id="create-advert-text">
         {{ form_widget(form.title) }}
       </div>
+      <div id="create-advert-youtube">
+        {{ form_widget(form.youtubeId) }}
+
+        <div id="ytplayer">
+
+        </div>
+      </div>
       <div id="progressbar">
       </div>
       <div class="image-preview medium">
