Fix autocomplete problems

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -103,6 +103,7 @@
     width: 310px;
     padding: 6px 12px;
     border: 1px solid #ccc;
+    font-size: 14px;
   }
   .tt-dropdown-menu {
     width: 350px;
