--- a/src/Adstacy/NotificationBundle/Resources/views/top_notifications.html.twig
+++ b/src/Adstacy/NotificationBundle/Resources/views/top_notifications.html.twig
@@ -1,4 +1,4 @@
-<ul id="top-notifications" class="dropdown-menu notifications">
+<ul id="top-notifications" class="pull-right dropdown-menu notifications">
   {% if notifications|length > 0 %}
     {% for notification in notifications %}
       <li>
