style search bar.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -90,7 +90,7 @@
       <div id="site-container" class="site-container site-wrapper">
         <div class="site-menu">
           <nav id="site-menu-inner" class="site-menu-inner">
-            <ul>
+            <ul class="site-main-menu">
               <li><h3>MAIN MENU</h3></li>
               <li><a href="{{ path('homepage') }}" class="icon icon-home" title="{{ "home"|trans }}">{{ "home"|trans }}</a></li>
               <li><a href="{{ path('adstacy_app_explore') }}" class="icon icon-globe" title="Explore">Explore</a></li>
