--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -6,15 +6,10 @@
 }
 
 html,
-body,
-.site-container,
-.site-menu,
-.site-content {
+body {
   height: 100%;
 }
 
-.site-container,
-.site-menu,
 .site-content {
   position: relative;
 }
@@ -33,7 +28,10 @@ body,
 }
 
 .site-menu {
+  @height: "calc(100% - 50px)";
+  position: fixed;
   width: 0;
+  height: ~"@{height}";
   border-right: 1px solid @border-color;
   overflow: hidden;
   z-index: @zindex-sidebar;
@@ -44,6 +42,10 @@ body,
 
   .site-main-menu a {
     font-size: 14px;
+  }
+
+  .icon:before {
+    float: right;
   }
 
   ul {
@@ -84,11 +86,9 @@ body,
 }
 
 .site-content {
-  top: -100%;
   margin-left: 0;
   width: 100%;
   min-width: 320px;
-  overflow-y: auto;
   .transition(margin-left ease .5s);
 }
 
@@ -98,7 +98,6 @@ body,
 }
 
 .site-container {
-  overflow: hidden;
   padding-top: 51px;
 }
 
@@ -184,7 +183,6 @@ body,
   }
 
   .site-content {
-    top: -100%;
     margin-left: 240px;
     width: auto;
   }
@@ -252,11 +250,11 @@ body,
 
   .close {
     position: absolute;
-    width: 30px;
+    width: 20px;
     line-height: 50px;
     color: #fff;
     font-size: 24px;
-    right: 0;
+    right: 15px;
     z-index: 5000;
   }
 
@@ -274,7 +272,7 @@ body,
     position: absolute;
     width: 100%;
     z-index: 3000;
-    padding: 10px 30px 10px 15px;
+    padding: 10px 35px 10px 15px;
   }
 }
 
